@@ -1612,10 +1612,10 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 ➰,27B0,,Selina Lange,2019-05-06
 ➿,27BF,,Selina Lange,2019-05-06
 〽️,303D,,Selina Lange,2019-05-06
-🌁,1F301,,Jonas Dunkel,2019-05-07
+🌁,1F301,,Nelly Nieter,2021-04-23
 🌉,1F309,,Jonas Dunkel,2019-05-07
 🌌,1F30C,,Jonas Dunkel,2019-05-07
-🌫️,1F32B,,Jonas Dunkel,2019-05-07
+🌫️,1F32B,,Nelly Nieter,2021-04-23
 🎆,1F386,,Jonas Dunkel,2019-05-07
 🎇,1F387,,Jonas Dunkel,2019-05-07
 🎍,1F38D,,Jonas Dunkel,2019-05-07
@@ -1813,3 +1813,8 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 🪵,1FAB5,,Liz Bravo,2020-09-26
 👰‍♂️,1F470-200D-2642-FE0F,,Liz Bravo,2020-10-30
 🤵‍♀️,1F935-200D-2640-FE0F,,Liz Bravo,2020-10-30
+😮‍💨,1F62E-200D-1F4A8,,Nelly Nieter,2021-04-23
+😵‍💫,1F635-200D-1F4AB,,Nelly Nieter,2021-04-23
+😶‍🌫️,1F636-200D-1F32B-FE0F,,Nelly Nieter,2021-04-23
+❤️‍🔥,2764-FE0F-200D-1F525,,Nelly Nieter,2021-04-23
+❤️‍🩹,2764-FE0F-200D-1FA79,,Nelly Nieter,2021-04-23
