@@ -327,3 +327,4 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 ,E058,extras-openmoji,brand,iNaturalist,"opendata, nature, observation",Alexander Müller,2020-11-04
 ,E283,extras-openmoji,smileys-emotion,annoyed face with tongue,"disappointed, playful, goofy, tongue out, annoyed, frustrated, childish, offended",Barkin Simsek,2021-01-16
 🏴️‍🅰️,1F3F4-FE0F-200D-1F170-FE0F,extras-openmoji,flags,"red and black flag","anarchist flag, bisected flag",Sam Hocevar,2021-03-15
+,E20E,extras-openmoji,travel-places,foggy mountain,"fog, weather, berg, peak, elevation, hiking",Jonas Dunkel,2019-05-07
