@@ -1,9 +1,4 @@
 emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,openmoji_date,skintone,skintone_combination,skintone_base_emoji,skintone_base_hexcode,unicode,order
-😶‍🌫️,1F636-200D-1F32B-FE0F,smileys-emotion,face-neutral-skeptical,face in clouds,"absentminded, face in the fog, head in clouds",,,,,,,,13.1,39
-😮‍💨,1F62E-200D-1F4A8,smileys-emotion,face-neutral-skeptical,face exhaling,"exhale, gasp, groan, relief, whisper, whistle",,,,,,,,13.1,45
-😵‍💫,1F635-200D-1F4AB,smileys-emotion,face-unwell,face with spiral eyes,"dizzy, hypnotized, spiral, trouble, whoa",,,,,,,,13.1,62
-❤️‍🔥,2764-FE0F-200D-1F525,smileys-emotion,emotion,heart on fire,"burn, heart, love, lust, sacred heart",,,,,,,,13.1,137
-❤️‍🩹,2764-FE0F-200D-1FA79,smileys-emotion,emotion,mending heart,"healthier, improving, mending, recovering, recuperating, well",,,,,,,,13.1,139
 🧔‍♂️,1F9D4-200D-2642-FE0F,people-body,person,man: beard,"beard, man",,,,,single,🧔‍♂️,1F9D4-200D-2642-FE0F,13.1,470
 🧔‍♀️,1F9D4-200D-2640-FE0F,people-body,person,woman: beard,"beard, woman",,,,,single,🧔‍♀️,1F9D4-200D-2640-FE0F,13.1,482
 🇦,1F1E6,,,regional indicator A,,,,,,,,,0,
