@@ -629,6 +629,23 @@
     "order": 38
   },
   {
+    "emoji": "😶‍🌫️",
+    "hexcode": "1F636-200D-1F32B-FE0F",
+    "group": "smileys-emotion",
+    "subgroups": "face-neutral-skeptical",
+    "annotation": "face in clouds",
+    "tags": "absentminded, face in the fog, head in clouds",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-23",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": 13.1,
+    "order": 39
+  },
+  {
     "emoji": "😏",
     "hexcode": "1F60F",
     "group": "smileys-emotion",
@@ -695,6 +712,23 @@
     "skintone_base_hexcode": "",
     "unicode": 1,
     "order": 44
+  },
+  {
+    "emoji": "😮‍💨",
+    "hexcode": "1F62E-200D-1F4A8",
+    "group": "smileys-emotion",
+    "subgroups": "face-neutral-skeptical",
+    "annotation": "face exhaling",
+    "tags": "exhale, gasp, groan, relief, whisper, whistle",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-23",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": 13.1,
+    "order": 45
   },
   {
     "emoji": "🤥",
@@ -967,6 +1001,23 @@
     "skintone_base_hexcode": "",
     "unicode": 0.6,
     "order": 61
+  },
+  {
+    "emoji": "😵‍💫",
+    "hexcode": "1F635-200D-1F4AB",
+    "group": "smileys-emotion",
+    "subgroups": "face-unwell",
+    "annotation": "face with spiral eyes",
+    "tags": "dizzy, hypnotized, spiral, trouble, whoa",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-23",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": 13.1,
+    "order": 62
   },
   {
     "emoji": "🤯",
@@ -2174,6 +2225,40 @@
     "skintone_base_hexcode": "",
     "unicode": 0.6,
     "order": 136
+  },
+  {
+    "emoji": "❤️‍🔥",
+    "hexcode": "2764-FE0F-200D-1F525",
+    "group": "smileys-emotion",
+    "subgroups": "emotion",
+    "annotation": "heart on fire",
+    "tags": "burn, heart, love, lust, sacred heart",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-23",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": 13.1,
+    "order": 137
+  },
+  {
+    "emoji": "❤️‍🩹",
+    "hexcode": "2764-FE0F-200D-1FA79",
+    "group": "smileys-emotion",
+    "subgroups": "emotion",
+    "annotation": "mending heart",
+    "tags": "healthier, improving, mending, recovering, recuperating, well",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-23",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": 13.1,
+    "order": 139
   },
   {
     "emoji": "❤️",
@@ -42796,8 +42881,8 @@
     "annotation": "foggy",
     "tags": "fog",
     "openmoji_tags": "",
-    "openmoji_author": "Jonas Dunkel",
-    "openmoji_date": "2019-05-07",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-23",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
@@ -45312,8 +45397,8 @@
     "annotation": "fog",
     "tags": "cloud",
     "openmoji_tags": "",
-    "openmoji_author": "Jonas Dunkel",
-    "openmoji_date": "2019-05-07",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-23",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
@@ -64422,6 +64507,23 @@
     "openmoji_tags": "interstellar, event horizon, accretion disc",
     "openmoji_author": "Alexander Müller",
     "openmoji_date": "2020-06-28",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E20E",
+    "group": "extras-openmoji",
+    "subgroups": "travel-places",
+    "annotation": "foggy mountain",
+    "tags": "",
+    "openmoji_tags": "fog, weather, berg, peak, elevation, hiking",
+    "openmoji_author": "Jonas Dunkel",
+    "openmoji_date": "2019-05-07",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
