@@ -11,6 +11,7 @@ New:
   + Annoyed face with tongue by Barkin Simsek @woswos #287
   + Québec flag by Denis Blanchette @dblanchette #293
   + Basque, Bretagne, and anarchist flag by Sam Hocevar @samhocevar #306
+  + Unicode 13.1: face in clouds, face-unwell, heart on fire, mending heart, by Nelly Nieter
 
 Redesign:
   * Amphora, Pile of Books, Dagger, Teddy Bear, Caterpillar, Lady Beetle, Microscope,
@@ -18,6 +19,8 @@ Redesign:
     Bowl with Spoon, Serious Face with Symbols Covering Mouth, Sad but Relieved Face,
     Fearful Face, Yawning Face
     by Liz Bravo @lizbravob
+  * Fog, Foggy by Nelly Nieter
+  * Moved old Fog to extras-openmoji Foggy Mountain
 
 Fix:
   * Fix wrong Unicode of Catalonia flag by Sam Hocevar @samhocevar #305
